--- a/zephyr-gnuarmemb.nuspec
+++ b/zephyr-gnuarmemb.nuspec
@@ -4,7 +4,7 @@
   <metadata>
     <!-- == PACKAGE SPECIFIC SECTION == -->
     <id>zephyr-gnuarmemb</id>
-    <version>7.3.1</version>
+    <version>9.2.1</version>
     <packageSourceUrl>https://github.com/n3rd4i/zephyr-gnuarmemb.git</packageSourceUrl>
     <!-- owners is a poor name for maintainers of the package. It sticks around by this name for compatibility reasons. It basically means you. -->
     <owners>n3rd4i</owners>
@@ -12,7 +12,7 @@
 
     <!-- == SOFTWARE SPECIFIC SECTION == -->
     <!-- This section is about the software itself -->
-    <title>zephyr-gnuarmemb (Install)</title>
+    <title>Zephyr&#58; GNU ARM Embedded</title>
     <authors>n3rd4i</authors>
     <!-- projectUrl is required for the community feed -->
     <projectUrl>https://github.com/n3rd4i/zephyr-gnuarmemb.git</projectUrl>
@@ -37,6 +37,10 @@
     <releaseNotes>
     # RELEASE_NOTES:
 
+    ## 9.2.1:
+    * this is the recommended version from Zephyr platform to work with 2.2.x
+    * mainly version and docs changes
+
     ## 7.3.1:
     * this is the recommended version from Zephyr platform to work with 1.14.0
     * mainly version and docs changes
@@ -49,7 +53,7 @@
 
     <!-- Specifying dependencies and version ranges? https://docs.nuget.org/create/versioning#specifying-version-ranges-in-.nuspec-files -->
     <dependencies>
-      <dependency id="gcc-arm-embedded" version="[7.3.1.20180627]" />
+      <dependency id="gcc-arm-embedded" version="[9.2.1]" />
     </dependencies>
   </metadata>
   <files>
