updated to version 10.2.1

--- a/zephyr-gnuarmemb.nuspec
+++ b/zephyr-gnuarmemb.nuspec
@@ -4,7 +4,7 @@
   <metadata>
     <!-- == PACKAGE SPECIFIC SECTION == -->
     <id>zephyr-gnuarmemb</id>
-    <version>9.3.1</version>
+    <version>10.2.1</version>
     <packageSourceUrl>https://github.com/n3rd4i/zephyr-gnuarmemb.git</packageSourceUrl>
     <!-- owners is a poor name for maintainers of the package. It sticks around by this name for compatibility reasons. It basically means you. -->
     <owners>n3rd4i</owners>
@@ -37,6 +37,9 @@
     <releaseNotes>
     # RELEASE_NOTES:
 
+    ## 10.2.1:
+    * in this version env-var is changed to compensate for package change. (namely: `gcc-arm-none-eabi-10-2020-q4-major`)
+
     ## 9.3.1:
     * mainly version and docs changes
 
@@ -56,7 +59,7 @@
 
     <!-- Specifying dependencies and version ranges? https://docs.nuget.org/create/versioning#specifying-version-ranges-in-.nuspec-files -->
     <dependencies>
-      <dependency id="gcc-arm-embedded" version="[9.3.1]" />
+      <dependency id="gcc-arm-embedded" version="[10.2.1]" />
     </dependencies>
   </metadata>
   <files>
